{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 695,
  "lineage": "2b6f5a18-b19d-c59e-e19a-33b6fdc6b579",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f49f6fcbde5c3803",
            "domain": "vpc",
            "id": "eipalloc-0f49f6fcbde5c3803",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-221-87.compute-1.amazonaws.com",
            "public_ip": "52.70.221.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:827518711034:instance/i-03b340a8397d17a5c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b340a8397d17a5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "examKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b38b68d00316b95",
            "private_dns": "ip-10-0-1-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d9188296a93614c7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-080b5898aeabf28f1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0796ec0d824c45cee",
            "tags": {
              "Name": "web-app-db"
            },
            "tags_all": {
              "Name": "web-app-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080b5898aeabf28f1"
            ]
          },
          "dependencies": [
            "aws_security_group.db_private_sg",
            "aws_security_group.webserver_public_sg",
            "aws_subnet.db_private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a6eaae9938c858c",
            "arn": "arn:aws:ec2:us-east-1:827518711034:instance/i-0a8d6fd161f33bad2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8d6fd161f33bad2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "examKP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2012121ae66cfc5",
            "private_dns": "ip-10-0-0-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.27",
            "public_dns": "ec2-52-6-57-44.compute-1.amazonaws.com",
            "public_ip": "52.6.57.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fef5c547f2c54584",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ef392b4c228b7530"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b3320572c10a6e5",
            "tags": {
              "Name": "web-app-webserver"
            },
            "tags_all": {
              "Name": "web-app-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef392b4c228b7530"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_public_sg",
            "aws_subnet.webserver_db_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:internet-gateway/igw-0837b2b22ce095f4b",
            "id": "igw-0837b2b22ce095f4b",
            "owner_id": "827518711034",
            "tags": {
              "Name": "web-app-dev-igw"
            },
            "tags_all": {
              "Name": "web-app-dev-igw"
            },
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f49f6fcbde5c3803",
            "association_id": "eipassoc-06b1c0e34661725ad",
            "connectivity_type": "public",
            "id": "nat-066f34e95dd1601fd",
            "network_interface_id": "eni-0006421dd6364aadc",
            "private_ip": "10.0.0.6",
            "public_ip": "52.70.221.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b3320572c10a6e5",
            "tags": {
              "Name": "web-app-NAT-gw"
            },
            "tags_all": {
              "Name": "web-app-NAT-gw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.webserver_db_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacls_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:network-acl/acl-08bb65ab22429c5b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-08bb65ab22429c5b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "827518711034",
            "subnet_ids": [],
            "tags": {
              "Name": "web-app-dev-nacls-to-public-subnet"
            },
            "tags_all": {
              "Name": "web-app-dev-nacls-to-public-subnet"
            },
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-03699d488d4b0f8c5",
            "id": "rtb-03699d488d4b0f8c5",
            "owner_id": "827518711034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-066f34e95dd1601fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-app-dev-private-rt"
            },
            "tags_all": {
              "Name": "web-app-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.webserver_db_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webserver_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-0f47b94be25b14388",
            "id": "rtb-0f47b94be25b14388",
            "owner_id": "827518711034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0837b2b22ce095f4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-app-dev-webserver-rt"
            },
            "tags_all": {
              "Name": "web-app-dev-webserver-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private_rt_to_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3d75a6da15c0800",
            "route_table_id": "rtb-03699d488d4b0f8c5",
            "subnet_id": "subnet-0796ec0d824c45cee"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.db_private_subnet",
            "aws_subnet.webserver_db_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webserver_rt_to_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034f354fa50636399",
            "route_table_id": "rtb-0f47b94be25b14388",
            "subnet_id": "subnet-00b3320572c10a6e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.webserver_rt",
            "aws_subnet.webserver_db_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-080b5898aeabf28f1",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b5898aeabf28f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef392b4c228b7530"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-app-db-sg",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-app-dev-db-sg"
            },
            "tags_all": {
              "Name": "web-app-dev-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver_public_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-0ef392b4c228b7530",
            "description": "Allow SSH and TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef392b4c228b7530",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-app-dev-webserver-sg",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-app-dev-webserver-sg"
            },
            "tags_all": {
              "Name": "web-app-dev-webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-0796ec0d824c45cee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0796ec0d824c45cee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-app-dev-db-subnet"
            },
            "tags_all": {
              "Name": "web-app-dev-db-subnet"
            },
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-00b3320572c10a6e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b3320572c10a6e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-app-dev-webserver-subnet"
            },
            "tags_all": {
              "Name": "web-app-dev-webserver-subnet"
            },
            "vpc_id": "vpc-0b393c3ba55dc223d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:vpc/vpc-0b393c3ba55dc223d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069d3a3d621b4614e",
            "default_route_table_id": "rtb-05b5ebb94ecb725cd",
            "default_security_group_id": "sg-0cc0c49ccb269cbc9",
            "dhcp_options_id": "dopt-067e434b9f487f65f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b393c3ba55dc223d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b5ebb94ecb725cd",
            "owner_id": "827518711034",
            "tags": {
              "Name": "web-app-dev-vpc"
            },
            "tags_all": {
              "Name": "web-app-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}